// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Container should render ById 1`] = `
<DocumentFragment>
  <div
    class="css-1thzeso"
  />
</DocumentFragment>
`;

exports[`Page Container should render BySlug 1`] = `
<DocumentFragment>
  <div
    class="css-1thzeso"
  />
</DocumentFragment>
`;

exports[`Page Container should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-1thzeso"
  />
</DocumentFragment>
`;
